# po2lmo.py

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.CN.md  README.md  po2lmo.py  pyproject.toml  setup.py
po2lmo/: __init__.py  cli.py  core.py
