# pyproject.toml for po2lmo

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "po2lmo"
dynamic = ["version"]
description = "Convert GNU gettext PO files to Lua Machine Objects (LMO) binary format"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shuqiao Zhang", email = "stevenjoezhang@gmail.com"},
]
maintainers = [
    {name = "Shuqiao Zhang", email = "stevenjoezhang@gmail.com"},
]
keywords = ["gettext", "po", "lmo", "lua", "internationalization", "localization", "i18n", "l10n"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/stevenjoezhang/po2lmo.py"
Repository = "https://github.com/stevenjoezhang/po2lmo.py"
Issues = "https://github.com/stevenjoezhang/po2lmo.py/issues"
Changelog = "https://github.com/stevenjoezhang/po2lmo.py/blob/main/CHANGELOG.md"

[project.scripts]
po2lmo = "po2lmo.cli:main"

[tool.setuptools]
packages = ["po2lmo"]

[tool.setuptools.dynamic]
version = {attr = "po2lmo.__version__"}

[tool.setuptools.package-data]
po2lmo = ["py.typed"]
